# eet

./: CMakeLists.txt  README.md
doc/: protocol.md
src/: CMakeLists.txt  Device.cpp  Device.h  Helpers.h  Master.cpp  Protocol.cpp  Protocol.h  Slave.cpp
tests/: CMakeLists.txt
